@@ -1,3 +1,8 @@
+2019-10-14  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/92069
+	* gcc.dg/torture/pr92069.c: New testcase.
+
 2019-10-14  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	* g++.dg/cpp0x/constexpr-union5.C: Test location(s) too.
